# etcd_CPP

./: .gitignore  CMakeLists.txt  DESIGN_OVERVIEW_CPP_ETCD.md  FUNCTIONALITY_CPP_ETCD.md  IMPLEMENTATION_STATUS.md  NEXT_PHASE_TASKS.md  RAFT_SNAPSHOT_COMPARE.md  README.md  SDD_CPP_ETCD_MVP.md
.github/workflows/: ci.yml
docs/: TLS_AUTH_GUIDE.md  api_reference.json
examples/: auth_client.cpp  go_client.go  grpc_client.cpp  python_client.py
include/etcdmvp/: grpc_server.h  node.h
include/etcdmvp/auth/: auth_manager.h
include/etcdmvp/cluster/: cluster.h  config.h
include/etcdmvp/compaction/: compaction_manager.h
include/etcdmvp/kv/: kv_engine.h
include/etcdmvp/lease/: lease_manager.h
include/etcdmvp/logging/: logger.h
include/etcdmvp/raft/: raft.h  raft_grpc_transport.h  ready.h
include/etcdmvp/storage/: backend.h  config.h  snapshot.h  wal.h
include/etcdmvp/tls/: tls_config.h
include/etcdmvp/watch/: watch_manager.h
proto/: etcd_mvp.proto
scripts/: generate_api_doc.py  generate_certs.sh  integration_test.sh
src/: auth_manager.cpp  cluster.cpp  cluster_config.cpp  compaction_manager.cpp  grpc_server.cpp  kv_engine.cpp  lease_manager.cpp  logger.cpp  main.cpp  node.cpp  raft.cpp  raft_core.cpp  raft_grpc_transport.cpp  storage_backend.cpp  storage_config.cpp  storage_snapshot.cpp  storage_wal.cpp  tls_config.cpp  watch_manager.cpp
tests/: test_kv_engine.cpp  test_lease_manager.cpp  test_raft.cpp  test_snapshot.cpp  test_util.h  test_wal.cpp  test_watch_manager.cpp
tests/integration/: integration_tests.cpp  test_leader_failover.cpp  test_node_recovery.cpp
